data/derived/comb/progs/unify/prog8386.ml.out
Characters 254-275:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
